--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ html{
 .task-items li,.connect li{
     padding: 0.5rem;
     border-radius: 10px;
-    font-size: 0.9rem;
+    font-size: clamp(0.85rem,1.1vw,1rem);
     font-weight: bolder;
     list-style-type: none;
 }
@@ -24,18 +24,22 @@ img{
     border-radius: 50% !important;
 }
 .notes-wrapper{
-    display: grid;
-    font-family: 'Patrick Hand', cursive;
-    font-style: normal;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-  
-    gap:10px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    columns: 200px; /* Number of columns */
+  column-gap: 1rem; /* Gap between columns */
+  padding: 1rem;
 }
-.notes-wrapper .note{
-    border-radius: 20px;
-    aspect-ratio: 1/1;
-    border-top-left-radius: 0;
 
+.notes-wrapper .note{
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  display: inline-block;
+  width: 100%;
+  border-top-left-radius: 0;
+  break-inside: avoid; /* Prevent breaks inside columns */
+  padding-bottom: 1rem;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+   
 
 }
 .notes-wrapper .note .remove{
@@ -44,10 +48,10 @@ img{
     
 }
 .task-head{
-    font-size:clamp(1.3rem,3vw,1.5rem);
     padding-inline: 0.6rem;
     font-weight: bold;
     color: #1e2939;
+    font-size: clamp(1.7rem,2vw,3rem);
 }
 .root{
     position: relative;
@@ -60,12 +64,10 @@ img{
 .display-form{
     display: none !important;
 }
-.add-button{
-    padding-inline:clamp(0.7rem,2vw,2rem);
-}
-.task-form form{
+
+/* .task-form form{
     padding: clamp(1.5rem,3vw,10rem);
-}
+} */
 .comming{
     font-size: clamp(1.5rem,3vw,3.5rem);
 }
@@ -113,6 +115,9 @@ img{
     }
     .task-items li,.list-items li{
         padding: 0.7rem;
+    }
+    .notes-wrapper{
+        grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
     }
 }
 .color i{
