--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,51 @@
 html{
     scroll-behavior: smooth;
 }
-.menu{  
-    color:#1e2939;
+::-webkit-scrollbar-track{
+    background-color: transparent;
+}
+::-webkit-scrollbar-thumb{
+    background-color:var(--form-buttons);
+    border-radius: 10px;
+    width: 0.25rem;
     
+}
+::-webkit-scrollbar{
+    background-color:transparent;
+    width: 0.25rem;
+}
+:root{
+    --text-color: hsl(216, 31%, 17%);
+    --bg-color: hsl(270, 100%, 98%);
+    --bg-menu: hsl(269, 100%, 95%);
+    --hover-menu: hsl(275, 81%, 89%);
+    --search-color: hsl(269, 100%, 92%);
+    --form-buttons: hsl(275, 96%, 52%);
+    --form-hover: hsl(275, 82%, 38%);
+    --card-emerald: var(--color-emerald-200);
+    --card-orange: var(--color-orange-200);
+    --card-cyan: var(--color-cyan-100);
+    --card-red: var(--color-red-200);
+    --card-purple-light: var(--color-purple-300);
+    --card-purple-lighter: var(--color-purple-200);
+ 
+}
+
+.dark-theme {
+    --text-color: hsl(0, 0%, 100%);
+    --bg-color: hsl(240, 29%, 5%);
+    --bg-menu: hsl(224, 23%, 9%);
+    --hover-menu:hsl(225, 48%, 49%);
+    --search-color: hsl(240, 29%, 5%,0.7);
+    --form-buttons: hsl(225, 48%, 49%);
+    --form-hover: hsl(225, 66%, 35%);
+    --card-purple-light:hsl(272, 89%, 41%);
+    --card-purple-lighter:hsl(292, 65%, 48%);
+    --card-red:hsl(356, 86%, 42%);
+    --card-orange:hsl(31, 100%, 41%);
+    --card-emerald:hsl(150, 42%, 40%);
+    --card-cyan: hsl(225, 48%, 49%);
+
 }
 .task-items li,.connect li{
     padding: 0.5rem;
@@ -14,20 +56,21 @@ html{
     font-weight: bolder;
     list-style-type: none;
 }
-.task-items li i,.connect li i{
+.task-items li i,.connect li i,.theme-mode i{
     padding: 0.25rem;
 }
 .task-items li:hover,.connect li:hover,.active-list{
-    background-color: #c87efa42;
+    background-color: var(--hover-menu);
 }
 img{
     border-radius: 50% !important;
 }
 .notes-wrapper{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    columns: 200px; /* Number of columns */
-  column-gap: 1rem; /* Gap between columns */
+    columns: 200px; 
+  column-gap: 1rem; 
   padding: 1rem;
+  color:var(--note-color);
 }
 
 .notes-wrapper .note{
@@ -36,9 +79,9 @@ img{
   display: inline-block;
   width: 100%;
   border-top-left-radius: 0;
-  break-inside: avoid; /* Prevent breaks inside columns */
+  break-inside: avoid;
   padding-bottom: 1rem;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px oklch(0 0 0/ 0.1);
    
 
 }
@@ -50,7 +93,6 @@ img{
 .task-head{
     padding-inline: 0.6rem;
     font-weight: bold;
-    color: #1e2939;
     font-size: clamp(1.7rem,2vw,3rem);
 }
 .root{
@@ -65,9 +107,7 @@ img{
     display: none !important;
 }
 
-/* .task-form form{
-    padding: clamp(1.5rem,3vw,10rem);
-} */
+
 .comming{
     font-size: clamp(1.5rem,3vw,3.5rem);
 }
@@ -75,7 +115,7 @@ img{
     color: #0d1d20;
 
 }
-.menu-list{
+.theme-mode,.menu-list{
     display: flex;
     gap: 0.5rem;
 }
@@ -115,9 +155,6 @@ img{
     }
     .task-items li,.list-items li{
         padding: 0.7rem;
-    }
-    .notes-wrapper{
-        grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
     }
 }
 .color i{
